Support state overrides in `linea_estimateGas` (#113)
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>